# vibecoding

./: README.md  btc_accumulation_model.ipynb
.github/workflows/: ci.yml  fetch-images.yml
fifteen-puzzle/: index.html  script.js  styles.css
livy-race-game/: index.html  script.js  styles.css
marketmaker/: .env.example  README.md  async_bot.py  basic_bot.py  client.py  config.py
nba_probs/: .gitignore  README.md  pyproject.toml
nba_probs/docs/: STEP_BY_STEP.md  environment.example
nba_probs/src/nba_probs/: __init__.py  config.py  data_pipeline.py  modeling.py  polymarket.py
nba_probs/src/nba_probs/cli/: __init__.py  collect.py  polymarket_snapshot.py
nba_probs/tests/: conftest.py  test_cli.py  test_config.py  test_data_pipeline.py  test_modeling.py  test_polymarket.py
nba_probs/web/: app.js  index.html  styles.css
polymarket_baby/: README.md  main.py  pyproject.toml
where-in-the-world/: index.html  script.js  styles.css
