[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-probs"
version = "0.1.0"
description = "Tools for comparing NBA win probabilities with Polymarket odds"
readme = "README.md"
authors = [
  { name = "Your Name" }
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "nba_api>=1.4.1",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "requests>=2.31",
  "joblib>=1.3",
  "pyarrow>=14.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
notebooks = [
  "jupyterlab>=4.0",
  "ipykernel>=6.25",
  "matplotlib>=3.8",
  "seaborn>=0.13"
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "responses>=0.25",
  "pandas>=2.1",
  "ruff>=0.2",
  "mypy>=1.7",
  "types-requests>=2.31",
  "types-python-dateutil>=2.8",
  "pandas-stubs>=2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not (slow or live)'"
markers = [
  "cli: tests exercising the command line interfaces",
  "live: tests that hit real external services",
  "slow: long-running tests",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
