[project]
name = "polymarket-baby"
version = "0.1.0"
description = "Minimal Polymarket trade poller example"
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/your-account/polymarket_baby"

